feat: 🦾 Implementação da rota para atualizar o livro
